latest appproval page for purchase requisition

--- a/src/scss/rightbar.scss
+++ b/src/scss/rightbar.scss
@@ -1,6 +1,6 @@
 @import "../assets/scss/theme.scss";
 @import "./animation.scss";
-
+@import "./select.scss";
 .swal-on-top {
   z-index: 10000 !important;
 }
