--- a/src/scss/rightbar.scss
+++ b/src/scss/rightbar.scss
@@ -23,7 +23,7 @@
 
 .company-menu .header-item:hover,
 .company-menu .header-item:focus {
-  color: #556ee6;
+  color: var(--primary-color, #094BAC);
 }
 
 .company-menu .header-profile-icon {
@@ -37,7 +37,7 @@
   background-color: #fff;
   border: 1px solid #eff2f7;
   margin-top: 0;
-  box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
+  box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
 }
 
 .company-menu .dropdown-item {
@@ -56,13 +56,13 @@
 
 .company-menu .dropdown-item:hover,
 .company-menu .dropdown-item:focus {
-  color: #556ee6;
+  color: var(--primary-color, #094BAC);
   background-color: #f8f9fa;
   text-decoration: none;
 }
 
 .company-menu .dropdown-item.active {
-  color: #556ee6;
+  color: var(--primary-color, #094BAC);
   background-color: #f8f9fa;
 }
 
